# portfolio-briefing

./: .env.example  .gitignore  CLAUDE.md  FIXES_REPORT.md  README.md  STRATEGY_UPGRADES_REPORT.txt
docs/: 00-build-plan.md  01-etrade-mcp-spec.md  02-daily-portfolio-briefing-skill.md  03-wheel-roll-advisor-skill.md  04-from-wheelhouz-keep-drop.md  05-briefing-directives.md  06-wheel-parameters.md  07-tail-risk-names.md  08-wheel-decision-matrix.md  09-regime-framework.md  10-equity-decision-matrix.md  11-recommendation-list-skill.md
etrade-mcp/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mcp-config.json  pyproject.toml
etrade-mcp/client/: requirements.txt
etrade-mcp/docs/ai_dev/: fixes-summary.md  mcp-server-focused-plan.md  mcp-server-implementation-plan.md  recent-changes-review.md
etrade-mcp/server/: __init__.py  config.py  main.py
etrade-mcp/server/auth/: __init__.py  oauth_manager.py  setup.py  token_store.py
etrade-mcp/server/tools/: __init__.py  account_tools.py  oauth_tools.py  options_quotes.py  stock_quotes.py
etrade-mcp/server/utils/: __init__.py  retry.py
etrade-mcp/tests/: __init__.py  test_account_tools.py  test_auth.py  test_token_store.py
skills/briefing-data-verifier/: SKILL.md
skills/briefing-directives/: README.md  SKILL.md
skills/briefing-quality-gate/: SKILL.md
skills/broker-position-reconciler/: SKILL.md
skills/capital-planner/: SKILL.md
skills/daily-portfolio-briefing/: DEMO_OUTPUT.md  README.md  SKILL.md  test_briefing.py
skills/defensive-collar-advisor/: SKILL.md
skills/thematic-scout/: SKILL.md
(+149 files in other folders)
