[project]
name = "etrade-mcp"
version = "0.1.0"
description = "E*TRADE MCP Server for stock and options data"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "rauth>=0.7.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
etrade-mcp = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
